# TurboCore

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  config.json  config.template.json  rustfmt.toml
.github/workflows/: clippy.yml  security.yml  tests.yml
api/: Cargo.toml
api/src/: mod.rs
api/src/admin/: create_admin.rs  login.rs  middleware.rs  mod.rs
api/src/auth/: change_password.rs  create_user.rs  delete_user.rs  email_verify.rs  get_user.rs  login.rs  logout.rs  magic_link.rs  mod.rs  refresh.rs  reset_password.rs  signup.rs  update_user.rs  util.rs
api/src/health/: mod.rs  ping.rs  sysinfo.rs  ws.rs
api/tests/: auth.rs
api/tests/auth/: create_user.rs  mod.rs
docs/: package.json  theme.config.jsx
docs/pages/: _meta.json  using-the-api.mdx
docs/pages/auth/: _meta.json  js.mdx  rest.mdx
docs/pages/getting-started/: _meta.json
email/: Cargo.toml
email/src/: forgot_password.rs  lib.rs  magic.rs  verification.rs
email/templates/: forgot_password.stpl  forgot_password.txt  magic.stpl  magic.txt  verification.stpl  verification.txt
entity/: Cargo.toml  mod.rs
entity/src/: admin_tokens.rs  admins.rs  email_verification.rs  mod.rs  password_reset_tokens.rs  prelude.rs  refresh_tokens.rs  users.rs
middlewares/: Cargo.toml  mod.rs
middlewares/src/: admin_middleware.rs  mod.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  main.rs
src/: main.rs
src/api/: auth.rs
src/util/: load_config.rs  mod.rs  prune_database.rs
