[package]
name = "TurboCore"
version = "0.1.0"
edition = "2021"
authors = ["Sami Yousef <mail@samiyousef.ca>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "api", "migration"]

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.93"
env_logger = "^0.10.0"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
hmac = "0.12.1"
sha2 = "0.10.6"
rust-argon2 = "1.0.0"
lettre = { version = "0.10", features = ["tokio1-native-tls"]}
uaparser = "0.6.0"
tokio = "1.26.0"
chrono = {version = "0.4.23", default-features = false }
log = "0.4.17"
sysinfo = "0.28.2"
# Database and related
entity = { path = "entity" }
migration = { path = "migration" }
api = { path = "api" }
sea-orm = { version = "0.11.0", features = [
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-actix-native-tls",
    "macros",
    "with-uuid",
    "with-json",
] }
clokwerk = "0.4.0"