[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "api"
path = "src/mod.rs"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.93"
env_logger = "^0.10.0"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
hmac = "0.12.1"
sha2 = "0.10.6"
# Sea-ORM
entity = { path = "../entity" }
migration = { path = "../migration" }
sea-orm = { version = "^0", features = [
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-actix-native-tls",
    "macros",
    "with-uuid",
    "with-json",
] }
# TODO: Use current versions of below:
bcrypt = "0.10.1"
chrono = "0.4"